--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <title>Octocats</title>
+    <link rel="stylesheet" href="styles3.css">
 <link rel="stylesheet" href="styles.css">
   </head>
 
